--- a/E-wallet/src/app/app.component.css
+++ b/E-wallet/src/app/app.component.css
@@ -5,7 +5,7 @@ body{
 #titulo{
 
     position: relative;
-    left: 16%;
+    left: 13%;
 
     margin: auto;
     width: 50%;
@@ -105,25 +105,27 @@ body{
 #sinTransacciones{
     position: absolute;
     text-align: center;
-    margin-top: 150px;
+    margin-top: 130px;
     height: 50%;
     width: 20%;
     z-index: 1;
    
-    left: 38%;
+    left: 39%;
     padding: 20px;
 
 }
 
 #sinTransacciones h1{
     position: relative;
-    left: 5%;
+    
+    right: 6%;
 }
 
 
 lottie-player{
     position: relative;
-    left: 25%;
+    margin-top: 45px;
+    left: 3%;
 }
 
 #botonLimpiarTransacciones{
